--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "coin-ui": {
+    "personal-site": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -75,10 +75,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "coin-ui:build:production"
+              "browserTarget": "personal-site:build:production"
             },
             "development": {
-              "browserTarget": "coin-ui:build:development"
+              "browserTarget": "personal-site:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -86,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "coin-ui:build"
+            "browserTarget": "personal-site:build"
           }
         },
         "test": {
